[metadata]
name = autoDEER
version = 0.1.0
author = Hugo Karas
author_email = hkaras@ethz.ch
description = A python package designed for the running of automated and optimised DEER/PELDOR experiments for pulsed EPR.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/HKaras/autoDeer
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.7
include_package_data = True

[flake8]
extend-ignore = W293,W291

